<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="225dp" />

        <ImageView
            android:id="@+id/bg_trailer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/bg_trailer"
            app:layout_constraintEnd_toEndOf="@id/bg_trailer"
            app:layout_constraintStart_toStartOf="@id/bg_trailer"
            app:layout_constraintTop_toTopOf="@+id/bg_trailer" />

        <ImageView
            android:id="@+id/bt_trailer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_play_circle_outline_white_48dp"
            app:layout_constraintBottom_toBottomOf="@id/bg_trailer"
            app:layout_constraintEnd_toEndOf="@id/bg_trailer"
            app:layout_constraintStart_toStartOf="@id/bg_trailer"
            app:layout_constraintTop_toTopOf="@id/bg_trailer" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/label_title"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintBottom_toTopOf="@id/divider1"
            app:layout_constraintEnd_toStartOf="@id/myToggleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_rating" />

        <ToggleButton
            android:id="@+id/myToggleButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ic_favorite_off"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="@id/tv_judul"
            app:layout_constraintEnd_toEndOf="@id/tv_rating"
            app:layout_constraintStart_toEndOf="@id/tv_judul"
            app:layout_constraintTop_toBottomOf="@id/bg_trailer" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_rating"
            android:text="0.0"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_judul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/myToggleButton"
            app:layout_constraintTop_toBottomOf="@id/bg_trailer" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="25dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_judul" />

        <TextView
            android:id="@+id/label_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/label_overview"
            android:textColor="#000000"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <include
            android:id="@+id/include_overview"
            layout="@layout/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/label_overview" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="25dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/include_overview" />

        <include
            android:id="@+id/include_detail"
            layout="@layout/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="25dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/include_detail" />

        <TextView
            android:id="@+id/label_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/label_review"
            android:textColor="#000000"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <include
            android:id="@+id/include_review"
            layout="@layout/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_review" />

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:layout_constraintBottom_toBottomOf="@id/divider3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>